# docassemble-CertificateOfService

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/CertificateOfService/data/questions/: certificate_of_service.yml
docassemble/CertificateOfService/data/templates/: certificate_of_service_next_steps.docx
